<!--
  ~
  ~ Copyright (C) 2023 Zokirjon Mamadjonov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Math For Kids</string>

    <!-- MainActivity -->
    <string name="play">Play</string>
    <string name="options">Settings</string>
    <string name="exit">Exit</string>

    <!-- OptionsActivity -->
    <string name="time_interval">Time limit per Question</string>
    <string name="seconds">Seconds :</string>
    <string name="digit_range">Digit Range</string>
    <string name="min">Minimum :</string>
    <string name="max">Maximum :</string>

    <!-- GameModeActivity -->
    <string name="practice">Practice</string>
    <string name="quiz">Quiz</string>
    <string name="duel">Duel</string>
    <string name="time">Time</string>

    <!-- PracticeActivity -->
    <string name="zero">0</string>
    <string name="equal_sign">=</string>
    <string name="question_mark">\?</string>

    <!-- TimeActivity -->
    <string name="seconds_remaining">Seconds remaining :</string>
    <string name="not_solved">Not solved!</string>

    <!-- ResultActivity -->
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="score">Score</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="restart">Restart</string>

</resources>