<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.OptionsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivBackOA"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b_back" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one_regular"
            android:gravity="center"
            android:text="@string/time_interval"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/seconds"
                android:textColor="@color/primaryColor3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvSecondsOA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/carter_one_regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="10" />

        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/sSecondsOA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/min"
            android:stepSize="2"
            android:valueFrom="10"
            android:valueTo="60" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/carter_one_regular"
            android:gravity="center"
            android:text="@string/digit_range"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/min"
                android:textColor="@color/primaryColor3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvMinOA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/carter_one_regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="10" />

        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/sMinOA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/min"
            android:stepSize="10"
            android:valueFrom="10"
            android:valueTo="490" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/max"
                android:textColor="@color/primaryColor3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvMaxOA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/carter_one_regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="20" />

        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/sMaxOA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/max"
            android:stepSize="10"
            android:valueFrom="20"
            android:valueTo="500" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>