<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".play.game_mode.result.ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/practice_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/carter_one_regular"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll1RA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScore">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1RA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/correct"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvAns1RA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/carter_one_regular"
                android:text="="
                android:textColor="@color/green"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv2RA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/wrong"
                android:textColor="@color/red"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvAns2RA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/carter_one_regular"
                android:text="="
                android:textColor="@color/red"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2RA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1RA">

        <TextView
            android:id="@+id/tvCorrectRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/carter_one_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvWrongRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/carter_one_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3RA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2RA">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivRestartRA"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/b_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/restart"
                android:textColor="@color/black"
                android:textSize="23sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivExitRA"
                android:layout_width="150dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/b_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/carter_one_regular"
                android:text="@string/exit"
                android:textColor="@color/black"
                android:textSize="23sp" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>